# wordle_rodriguez_patrick

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_pdr2117/: __init__.py  wordle_pdr2117.py
tests/: test_wordle_pdr2117.py
