[tool.poetry]
name = "wordle_pdr2117"
version = "0.1.0"
description = "QMSS G5072 Homework 7"
authors = ["Patrick Rodriguez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2025.8.25"
sphinx-autodoc-typehints = "^3.5.2"
sphinx-autoapi = "^3.6.1"
myst-parser = "^4.0.1"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
